# wfwfs

./: AUTHORS  CMakeLists.txt  INSTALL  README  TODO
cfg/: config.dev  config.sst  config.vtt
cmake/: FindExternal.cmake  clang.cmake  config.cmake  gcc.cmake  macros.cmake  revision.cmake  use_pleora.cmake  use_threads.cmake
scripts/: wfwfs  wfwfs-cron  wfwfs-rsync  wfwfs_logs  wfwfs_plots
src/: CMakeLists.txt  application.cpp  application.hpp  array.hpp  arraystats.cpp  arraystats.hpp  arrayutil.hpp  autosave.cpp  autosave.hpp  camera.cpp  camera.hpp  cell.cpp  cell.hpp  daemon.cpp  daemon.hpp  datautil.hpp  dimmset.cpp  dimmset.hpp  filecam.cpp  filecam.hpp  filefits.cpp  filefits.hpp  fileio.cpp  fileio.hpp  filemeta.hpp  fitswriter.cpp  fitswriter.hpp  frame.cpp  frame.hpp  functions.hpp  model.cpp  model.hpp  pleoracam.cpp  pleoracam.hpp  point.hpp  recursepath.cpp  recursepath.hpp  revision.cpp.template  revision.hpp  ricecompress.cpp  (+20 more)
